<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="email">Email</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="middleName">Middle Name</string>
    <string name="birthdate">Birthdate</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="homeAddress">Home Address</string>
    <string name="civilStatus">Civil Status (Single/Married)</string>
    <string name="phoneNumber">Contact Number (Phone Number)</string>
    <string name="emergencyContactNumber">Emergency Contact Number (Phone Number)</string>
    <string name="btnSave">Save</string>
    <string name="btnCancel">Cancel</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>